--- a/index.html
+++ b/index.html
@@ -109,17 +109,16 @@
         <div class="col-xs-12 col-sm-6">
           <img src="images/main_pic_2_section.jpg" class="img-responsive principal_img" id="main_pic_2section">
         </div>
-      </div>
 
       <!-- the footer at the section divide the width in 4 equal parts -->
       <div class="row footer_end_section">
 
         <!-- get 3 columns for each pic -->
         <div class="col-xs-12 col-sm-3">
-          <img class="img-responsive footer_img" src="images/second_section_footer1.jpg"">
+          <img class="img-responsive footer_img" src="images/second_section_footer1.jpg">
         </div>
         <div class="col-xs-12 col-sm-3">
-          <img class="img-responsive footer_img" src="images/second_section_footer2.jpg"">
+          <img class="img-responsive footer_img" src="images/second_section_footer2.jpg">
         </div>
         <div class="col-xs-12 col-sm-3">
           <img class="img-responsive footer_img" src="images/second_section_footer3.jpg">
