--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <img class="img-responsive footer_img" src="images/second_section_footer3.jpg">
         </div>
         <div class="col-xs-12 col-sm-3">
-          <img class="img-responsive footer_img" src="images/first_section_footer4.jpg"">
+          <img class="img-responsive footer_img" src="images/first_section_footer4.jpg">
         </div>
       </div>
     </div>
